--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 :root
 {
-  --yellow: #F5C32C;
-    --orange : #FCA61F;
+  --yellow: #ef1010; /* yellow variable for this color*/
+    --orange : #f43e0b;
     --black : #242D49;
     --gray : #788097;
     --blueCard : #DDF8FE;
@@ -17,7 +17,27 @@
     color: var(--black);    
 }
 
+.button{ /* in app.js here general style we write*/
+  border-radius: 34px;
+  border: none;
+  color: white;
+  font-size: 16px;
+  padding: 11px 26px 11px 26px;
+  background: linear-gradient(180deg, #fdc50f 26.71%, #fb982f 99.36%);
+  box-shadow: 0px 20px 24px 3px rgba(251, 161, 40, 0.42);
+}
 
+.button:hover{
+  background: white;
+  cursor: pointer;
+  color: var(--orange);
+  border: 1px solid var(--orange);
+}
   
-
+@media screen and (max-width : 480px) {
+  .App{
+    padding: 0.5rem 1rem;
+  }
+  
+}
   
